# comp_maths_labs

./: .gitignore  .travis.yml  CNAME  README.md  index.html
coursework/: build.sh  deploy.sh
coursework/notebook/: car.html  car.ipynb
coursework/report/latex/: coursework.tex  titlepage.tex
lab1/: CMakeLists.txt  build.sh
lab1/app/: CMakeLists.txt
lab1/app/src/: help.cpp  help.h  main.cpp
lab1/lib/: CMakeLists.txt
lab1/lib/src/: SPLINES.CPP  SPLINES.H  lagrange.cpp  lagrange.h  lagrange_calculation.cpp  lagrange_calculation.h  quanc8.cpp  quanc8.h  quanc8_calculation.cpp  quanc8_calculation.h  spline_calculation.cpp  spline_calculation.h  util.cpp  util.h
lab1/report/doxygen/: config.doxygen
lab1/report/latex/: lab1.tex  settings.tex  titlepage.tex
lab1/std_lib/: CMakeLists.txt
lab1/std_lib/src/: lagrange.c  lagrange.h  quanc8.c  quanc8.h  splines.c  splines.h
lab2/: build.gradle  build.sh  settings.gradle
lab2/app/: build.gradle
lab2/matrix_lib/: build.gradle
lab2/matrix_lib/src/main/c/: matrix.c  matrix.h
lab2/matrix_lib/src/main/java/com/lamtev/comp_maths_labs/lab2/: Matrix.java  MatrixUtil.java
lab2/report/latex/: lab2.tex  titlepage.tex
lab2/report/latex/data/: norm_full.csv  norm_right.csv
lab3/: build.gradle  settings.gradle
lab3/app/: build.gradle
lab3/diffeqs_lib/: build.gradle
lab3/diffeqs_lib/src/main/c/: rkf45.c  rkf45.h
lab3/report/latex/: lab3.tex  settings.tex  titlepage.tex
lab3/report/latex/data/: eulerCauchyEpsilons.csv  eulerCauchyValues.csv  exactValues.csv  rkf45Epsilons.csv  rkf45Values.csv
(+12 files in other folders)
